# bloodbowl_league_manager

./: LICENSE  README.md  compose.yaml  drizzle.config.ts  eslint.config.js  package-lock.json  package.json  playwright.config.ts  vite.config.ts
back/: Cargo.toml
config/pgadmin/: server.json
drizzle/: 0000_flaky_silvermane.sql  0000_strange_starbolt.sql  0000_sudden_randall_flagg.sql  0000_tricky_tinkerer.sql  0001_funny_human_fly.sql  0001_left_maria_hill.sql  0001_material_dreaming_celestial.sql  0002_daily_carlie_cooper.sql  0002_nervous_microchip.sql  0003_chemical_crusher_hogan.sql  0003_tricky_bug.sql  0004_fixed_tiger_shark.sql  0004_solid_rick_jones.sql  0005_material_synch.sql  0005_remarkable_meltdown.sql  0006_romantic_tinkerer.sql  0006_thick_catseye.sql  0007_peaceful_the_initiative.sql  0007_young_starbolt.sql  0008_green_sentry.sql
drizzle/meta/: 0000_snapshot.json  0001_snapshot.json  0002_snapshot.json  0003_snapshot.json  0004_snapshot.json  0005_snapshot.json  0006_snapshot.json  0007_snapshot.json  0008_snapshot.json  _journal.json
front/: package-lock.json  package.json
src/: app.d.ts  app.html  hooks.server.ts
src/lib/components/: roasterDetails.svelte  rosterDetails.svelte  teamForm.svelte  userForm.svelte
src/lib/server/: session.ts
src/routes/: +layout.svelte  +page.svelte  layout.css  page.svelte.spec.ts
src/routes/login/: +page.server.ts  +page.svelte
src/routes/logout/: +server.ts
src/routes/register/: +page.server.ts  +page.svelte
src/routes/roasters/: +page.server.ts  +page.svelte
src/routes/rosters/: +page.svelte  (+1 more)
(+35 files in other folders)
